# lidar_fusion

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
scripts/: rate.py
src/: lidar_merger_node.cpp
