<?xml version="1.0"?>
<package format="3">
  <name>lidar_fusion</name>
  <version>0.0.1</version>
  <description>Dynamic multi-LiDAR cloud merger for ROS2, with topic rate monitor.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ament_index_cpp</depend>
  <depend>python3</depend>

  <!-- <exec_depend>python3</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>sensor_msgs</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>